--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ td, table{
 form { margin:0px; padding:0px}
 body { margin:0px; padding:0px; background-color: #FFFFFF}
 
-a { color:#E93400; text-decoration:none}
+a { color:#E93400;}
 a:hover{ text-decoration:underline}
 
 span a { color:#E93400; text-decoration:underline}
@@ -22,10 +22,10 @@ span a:hover{ text-decoration:none}
 .list ul{margin:0px; padding:0px; list-style:none; line-height:19px;}
 .list ul li{ background:url(images/list_marker.gif) no-repeat left top; padding:0 0 0 10px}
 .list ul li a{ color:#E93400; text-decoration:underline}
-.list ul li a:hover{text-decoration:none}
+.list ul li a:hover{}
 
 .policy{ color:#7F7F7F}
-.policy a{ color:#000000; text-decoration:none}
+.policy a{ color:#000000;}
 .policy a:hover{ text-decoration:underline}
 
 span{ color:#000000}
@@ -33,7 +33,7 @@ span{ color:#000000}
 strong a{ font-size:10px}
 
 strong{ font-size:10px}
-b{ color:#E93400}
+b{ color:#000000}
 
 .form input {
 	width:191px;
@@ -76,7 +76,7 @@ h1{
 
 .nav {
 	overflow: auto;
-	height: 40px;
+	height: 31px;
 }
 .nav-button{
 	background: #FFF url('images/title.png') no-repeat;
@@ -87,8 +87,8 @@ h1{
 }
 .nav-button a{
 	color: #fff;
-	font-size: 16px;
-	line-height: 40px;
+	font-size: 12px;
+	line-height: 25px;
 	font-weight: 600;	
 }
 
@@ -99,24 +99,28 @@ h1{
 .button-left,.button-right{
 	background: #FFF url('images/title.png') no-repeat;
 }
-.nav-button-last .button-left{background-position-x:-563px;}
-.nav-button-last .button-right{background-position-x:-622px;}
+.nav-button-last{background-position-x:-563px;}
 
-.nav-button:hover,.button-left:hover,.button-right:hover { background-position-y: -42px;}
+
+.nav-button:hover{ background-position-y: -27px;}
 .nav-button:hover a{color: white;}
-a.button-left:hover,a.button-right:hover{ color: gray;}
+.nav-button-last a{ color: rgb(80,80,80);}
+.nav-button-last:hover a{ color: rgb(80,80,80);}
+.nav-button-last {margin-right:0px;}
 
-.nav-button-last {margin-right:0px;background: none;}
-.nav-button-last a{display: inline-block;width: 54px;}
 .slide-title{
 	font-size: 18px;
-	line-height:24px;
-	margin:15px 5px 10px 5px;
+	line-height: 24px;
+	margin:5px 15px;
 	font-weight: 200;	
 }
 .slide-content{
 	padding    : 5px 15px;
-	word-wrap  : break-word;
-	word-break : break-all;
-	word-wrap  : break-word;
+	line-height: 16px;
 }
+.slide-content p{
+	padding-bottom: 5px;
+}
+.course {line-height: 18px;}
+.course ol{padding-left: 10px;}
+.course li{list-style:none outside;}
